# Devious-Editor-Classic-Bookmark

./: .gitignore  CMakeLists.txt  about.md  full_log.txt  logs_mac_failed.txt  logs_win.txt  logs_win_retry3_full.txt  mod.json
.github/workflows/: build.yml
src/: main.cpp
src/editor/: ActionSerializer.cpp  ActionSerializer.hpp  EditorHooks.cpp  EditorHooks.hpp
src/network/: Discovery.cpp  Discovery.hpp  Protocol.cpp  Protocol.hpp  Session.cpp  Session.hpp  SyncManager.cpp  SyncManager.hpp
src/ui/: CollabButton.cpp  CollabButton.hpp  CollabRequestPopup.cpp  CollabRequestPopup.hpp  PlayerBrowserLayer.cpp  PlayerBrowserLayer.hpp  RemotePlayerIndicator.cpp  RemotePlayerIndicator.hpp
src/utils/: Platform.cpp  Platform.hpp
